Fix page height on mobile webkit browsers

--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
         #container {
             min-width: 100%;
             min-height: 100vh;
+            min-height: -webkit-fill-available;
+            min-height: fill-available;
             display: flex;
             flex-direction: column;
         }
